src/objects/ECC_MVCData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds metadata for each field in the solution. Grabbing information from Salesforce&apos;s schema meta-data will not work because of the yes/no radio buttons and the file upload sections</description>
    <fields>
        <fullName>choices__c</fullName>
        <description>Separate choices by two semi-colons (i.e. this;;that;;there)</description>
        <inlineHelpText>Separate choices by two semi-colons (i.e. this;;that;;there)</inlineHelpText>
        <label>choices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defaultRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>defaultRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dependentFields__c</fullName>
        <description>fields that will appear conditionally based on other fields</description>
        <inlineHelpText>fields that will appear conditionally based on other fields</inlineHelpText>
        <label>dependentFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this is active</description>
        <inlineHelpText>Whether or not this is active</inlineHelpText>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <description>Field name</description>
        <inlineHelpText>Field name</inlineHelpText>
        <label>key</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <description>often times this is a question.</description>
        <inlineHelpText>often times this is a question.</inlineHelpText>
        <label>label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pageName__c</fullName>
        <description>The name of the page where the question will exist</description>
        <inlineHelpText>The name of the page where the question will exist</inlineHelpText>
        <label>pageName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordTypesRequired__c</fullName>
        <label>recordTypesDisplayedFor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortOrder__c</fullName>
        <description>The order in which the questions will appear</description>
        <inlineHelpText>The order in which the questions will appear</inlineHelpText>
        <label>sortOrder</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>text, radio, picklist, upload, textarea, date</description>
        <inlineHelpText>text, radio, picklist, upload, textarea, date</inlineHelpText>
        <label>type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uploadName__c</fullName>
        <label>uploadName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ECC_MVCData</label>
</CustomObject>